# ndq

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  ndq.sln  prebuild.bat  shader.bat
.github/workflows/: build.yml  cmake-single-platform.yml
01-window/: 01-window.vcxproj  main.cpp
02-triangle/: 02-triangle.vcxproj  02-triangle.vcxproj.filters  main.cpp  vertex.hlsl
examples/: CMakeLists.txt
examples/01-window/: CMakeLists.txt  main.cpp
examples/01_window/: CMakeLists.txt  main.cpp
examples/02-triangle/: CMakeLists.txt  main.cpp  pixel.h  vertex.h  vertex.hlsl
examples/02_gui/: CMakeLists.txt  main.cpp
examples/03-model/: main.cpp
examples/03_triangle/: CMakeLists.txt  main.cpp
examples/Mesh/: CMakeLists.txt  Mesh.cpp
examples/Triangle/: CMakeLists.txt  Pixel.h  Triangle.cpp  Vertex.h
examples/Window/: CMakeLists.txt  Window.cpp
include/ndq/: ApplicationWindow.h  CommandList.h  Defs.h  GraphicsDevice.h  Root.h  SceneManager.h  SceneNode.h  Type.h  platform.h  rhi.h  rhi_command.h  rhi_format.h  rhi_input_layout.h  rhi_resource.h  rhi_shader.h  rhi_view.h  window.h
include/ndq/asset/: asset.h  manager.h
include/ndq/core/: resource.h  uuid.h
include/ndq/rhi/: command_list.h  device.h  shader.h
ndq-core/: ndq-core.vcxproj  ndq-core.vcxproj.filters  ndq_internal.h  packages.config  rhi.cpp  util.cpp  window.cpp
source/: ApplicationWindow.cpp  CMakeLists.txt  CommandList.cpp  CommandListInternal.h  DefaultSceneManager.h  Dx12CommandList.cpp  Dx12GraphicsDevice.cpp  GraphicsDeviceInternal.h  Root.cpp  SceneManager.cpp  asset.cpp  asset_proxy.h  camera.cpp  component.cpp  definitions.h  entity.cpp  gltf.cpp  gui.cpp  image.cpp  mesh.cpp  ndq.ixx  platform.cpp  predef.h  render_data.cpp  renderer.cpp  rhi.cpp  scene.cpp  shader.cpp  smart_ptr.cpp  system.cpp  window.cpp  window.h
source/asset/: asset.cpp  manager.cpp
source/core/: uuid.cpp
source/platform/: window.cpp
source/rhi/: command_list.cpp  command_list_internal.h  device.cpp  device_internal.h  shader.cpp
source/shaders/: postprocess_ps.hlsl  postprocess_vs.hlsl
